# FireBot

./: .gitignore  CMakeLists.txt  README.md  update.sh
src/: can_bus.cpp  can_bus.h  gun_control.cpp  gun_control.h  main.cpp  platform_control.cpp  platform_control.h  utils.cpp  utils.h
